--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ecofilter - Soluciones Sostenibles</title>
+    <title>Ecoflow - Soluciones Sostenibles</title>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Montserrat:wght@600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <div class="header-content">
-            <img src="logo.png" alt="Ecofilter Logo" class="logo">
+            <img src="logo.png" alt="Ecoflow Logo" class="logo">
             <h1>Filtrando Soluciones</h1>
             <h2>Acceso Económico y Sostenible al Agua en Arequipa</h2>
             <a href="#contacto" class="cta-button">Descubre cómo puedes ayudar</a>
@@ -67,7 +67,7 @@
             <div class="column-container">
                 <div class="column">
                     <p>
-                        Ecofilter es un sistema de captación y filtrado de agua de lluvia que utiliza materiales reciclados para proporcionar agua limpia de forma económica y ecológica. Nuestro enfoque es reducir el impacto económico en las familias y crear soluciones sostenibles y replicables.
+                        Ecoflow es un sistema de captación y filtrado de agua de lluvia que utiliza materiales reciclados para proporcionar agua limpia de forma económica y ecológica. Nuestro enfoque es reducir el impacto económico en las familias y crear soluciones sostenibles y replicables.
                     </p>
                     <ul>
                         <li>Acceso a agua limpia de manera económica</li>
@@ -139,7 +139,7 @@
     </section>
 
     <footer>
-        <p>Ecofilter - Proyecto de Sostenibilidad y Agua Limpia en Perú. Todos los derechos reservados.</p>
+        <p>Ecoflow - Proyecto de Sostenibilidad y Agua Limpia en Perú. Todos los derechos reservados.</p>
     </footer>
 </body>
 </html>
