--- a/index.html
+++ b/index.html
@@ -37,30 +37,6 @@
         </div>
     </section>
 
-    <section id="contexto-global">
-        <div class="container">
-            <h3>Una Crisis Mundial del Agua</h3>
-            <div class="column-container">
-                <div class="column">
-                    <p>
-                        A nivel mundial, el consumo de agua se ha triplicado en los últimos 50 años. Los recursos hídricos están bajo una enorme presión, y los costos de gestión del agua ascienden a $58 billones de dólares al año.
-                    </p>
-                    <p>
-                        La situación en Perú es alarmante: el Centro Nacional de Planeamiento Estratégico (CEPLAN) prevé que el 58% de la población vivirá en zonas con escasez de agua para 2030, lo que incrementará el costo del agua y aumentará la desigualdad.
-                    </p>
-                </div>
-                <div class="column">
-                    <h4>Objetivos de Desarrollo Sostenible (ODS)</h4>
-                    <ul>
-                        <li><strong>ODS 6:</strong> Agua limpia y saneamiento para todos.</li>
-                        <li><strong>ODS 10:</strong> Reducción de desigualdades.</li>
-                        <li><strong>ODS 11:</strong> Ciudades y comunidades sostenibles.</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </section>
-
     <section id="solucion">
         <div class="container">
             <h3>Una Alternativa Sostenible</h3>
@@ -77,45 +53,20 @@
                 </div>
                 <div class="column">
                     <img src="filtro.png" alt="Filtro Propuesto" class="filtro-img">
+                    <!-- Recuadro de información adicional -->
+                    <div class="info-box">
+                        <p><strong>Carbón activado a partir de café</strong></p>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <section id="foda">
+    <section id="feedback">
         <div class="container">
-            <h3>Análisis FODA del Proyecto</h3>
-            <div class="column-container">
-                <div class="column">
-                    <h4>Fortalezas</h4>
-                    <ul>
-                        <li>Equipo multidisciplinario con conocimientos en ingeniería y administración.</li>
-                        <li>Uso de recursos locales y materiales reciclados.</li>
-                        <li>Prototipo validado en zonas rurales de Arequipa.</li>
-                    </ul>
-                </div>
-                <div class="column">
-                    <h4>Oportunidades</h4>
-                    <ul>
-                        <li>Posibilidad de financiamiento mediante organismos internacionales como ONU y PNUMA.</li>
-                        <li>Capacidad de replicación en otras regiones afectadas.</li>
-                    </ul>
-                </div>
-                <div class="column">
-                    <h4>Debilidades</h4>
-                    <ul>
-                        <li>Dependencia de la disponibilidad de agua de lluvia.</li>
-                        <li>Limitaciones en la infraestructura de ciertas áreas rurales.</li>
-                    </ul>
-                </div>
-                <div class="column">
-                    <h4>Amenazas</h4>
-                    <ul>
-                        <li>Cambios en la legislación respecto a la calidad del agua potable.</li>
-                        <li>Resistencia por parte de la comunidad a adoptar nuevas tecnologías.</li>
-                    </ul>
-                </div>
-            </div>
+            <h3>Tu Opinión Nos Importa</h3>
+            <p>Ayúdanos a mejorar proporcionando tu feedback sobre Ecoflow.</p>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLScZwThyfXOA4URGu_g-24kCgSe0E6jXIvMnBz4eHgd3m2gbfw/viewform" target="_blank" class="cta-button">Completar Formulario</a>
         </div>
     </section>
 
