--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </div>
     </section>
 
-    <section id="feedback">
+    <section id="Más información">
         <div class="container">
             <h3>Tu Opinión Nos Importa</h3>
             <p>Ayúdanos a mejorar proporcionando tu feedback sobre Ecoflow.</p>
