--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <div class="header-content">
             <img src="logo.png" alt="Ecoflow Logo" class="logo">
-            <h1>Filtrando Soluciones</h1>
+            <h1>ECOFLOW: Filtrando Soluciones</h1>
             <h2>Acceso Económico y Sostenible al Agua en Arequipa</h2>
             <a href="#contacto" class="cta-button">Descubre cómo puedes ayudar</a>
         </div>
